--- a/fengcai.html
+++ b/fengcai.html
@@ -13,6 +13,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
 		<link href="style.css" rel="stylesheet" />
 		<link rel="stylesheet" href="css/navlist.css"></link>
+		<link rel="stylesheet" href="css/fencai.css"></link>
 		<link rel="stylesheet" href="css/prettyphoto.css" type="text/css" media="screen" />
 
 	</head>
@@ -465,7 +466,7 @@
 		<!-- xingxiang Navigation -->
 		<div id="yuangong"></div>
 		<section>
-			<div class="clearfix" style="background: white;padding-bottom: 50px;width: 80%;margin: 0 auto;">
+			<div class="clearfix item_wrap" style="background: white;padding-bottom: 50px;width: 80%;margin: 0 auto;">
 
 				<div class="container no-padding" style="height: auto;">
 
@@ -584,7 +585,7 @@
 		<!--/xingxiang Navigation -->
 		<div id="dangzheng"></div>
 		<section>
-			<div class="clearfix" style="background: white;padding-bottom: 50px;width: 80%;margin: 0 auto;">
+			<div class="clearfix item_wrap" style="background: white;padding-bottom: 50px;width: 80%;margin: 0 auto;">
 				<div class="container no-padding" style="height: auto;">
 					<!-- xingxiang Header -->
 					<div style="text-align: center;line-height: 50px;margin-top: 50px;">
@@ -647,7 +648,7 @@
 
 		<div id="gonghui" style="border: 1px solid red"></div>
 		<section>
-			<div class="clearfix" style="background: white;padding-bottom: 50px;width: 80%;margin: 0 auto;">
+			<div class="clearfix item_wrap" style="background: white;padding-bottom: 50px;width: 80%;margin: 0 auto;">
 
 				<div class="container no-padding" style="height: auto;">
 
