--- a/zhineng.html
+++ b/zhineng.html
@@ -13,6 +13,7 @@
 		<link rel="icon" type="image/ico" href="images/ding.png" />
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
 		<link href="style.css" rel="stylesheet" />
+		<link rel="stylesheet" href="css/navlist.css"></link>
 		<link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="screen" />
 		<link href="css/jquery.bxslider.css" rel="stylesheet" />
 		<link href="css/font-awesome.min.css" rel="stylesheet" />
@@ -22,29 +23,6 @@
 	<body>
 
 		<!-- nav -->
-		<style>
-			.xiala {
-				display: none;
-				position: absolute;
-				top: 45px;
-				text-align: center;
-				background: rgba(255, 255, 255, 1.00);
-				margin: 0 auto;
-				width: auto;
-				text-align: center;
-				border-radius: 3px;
-			}
-			
-			.xiala>li {
-				display: block;
-				color: brown;
-				padding: 5px 10px;
-			}
-			
-			.nav>li:hover .xiala {
-				display: block;
-			}
-		</style>
 		<div id="navigation" class="navbar navbar-fixed-top" style="z-index: 19999">
 			<div class="navbar-inner ">
 				<div class="container no-padding">
